--- a/Devoir Latex/devoir.tex
+++ b/Devoir Latex/devoir.tex
@@ -1,66 +1,70 @@
-\documentclass[a4paper, 12pt, french]{book}
+\documentclass[a4paper, 11pt, french, oneside]{book}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{babel}
-
-\title{\textbf{{\LARGE Résumé du cours de Linux en Latex}}}
-\author{QM - AM - AN}
+\usepackage[francais]{babel}
+\usepackage{graphicx}
+\usepackage{charter}
+\usepackage{color}
 
 \begin{document}
-   \maketitle
+  
+ \begin{titlepage}
+  \begin{center}
+   \includegraphics[width=12cm]{linux.jpg}%
+   \hspace{60pt}%
+   \vspace{50pt}%
+   \LARGE
+   \textbf{Résumé du cours de Linux en Latex}\\
+   \color{red}
+   \textbf{Classe X81}\\
+   Ambroise - Anouar - Quentin\\
+   \vspace{50pt}%
+   \includegraphics[width=8cm]{latex.jpg}%
+  \end{center}
+ \end{titlepage}
+      
    \tableofcontents
    \frontmatter
    \mainmatter
-   \chapter{MODULE 1}
-      \section{\Large  Les 7 premières commandes}
-      
-      
-     \begin{flushleft}
-     • \textbf {\textit{whoaim}} : Renvoie votre login-name actuel.\\
-     • \textbf {\textit{hostname}} : Renvoie le nom de la machine sur laquelle vous travaillez.\\
-     • \textbf {\textit{date}} : Renvoie la date actuelle.\\
-     • \textbf {\textit{uname}} : Renvoie des informations sur le système actuel.\\
-     • \textbf{\textit{passwd}} : Permet au user de changer son mot-de-passe et permet à l’administrateur ou le root de changer le mot-de-passe d’un user.\\
-     • \textbf{\textit{touch}} : Permet la création d’un fichier vide ou la mise à jour de la date de modification d’un ficher existant.\\
-     • \textbf{\textit{last}} : Renvoie la liste des utilisateurs qui se sont récemment connectés au système\\
-     \end{flushleft}
-     
-       
-\section{\Large Obtenir de l’aide }
-		\subsection{Avec l’attribut "--help"}
-	Pour obtenir une aide rapide sur une commande, on utilise l’attribut "- -help" à la suite de la commande.
-		\subsection{Avec la commande man} 
- Man est une commande qui permet d’obtenir de l’aide quant à l’utilisation,
-la syntaxe et les attributs des autres commandes Linux.\\
-La commande man s’utilise avec la syntaxe suivante : man [Nø section] [nom de la commande recherchée.\\
-Il peut arriver que man ne soit pas à jours et ne vous renvoie rien ou des
-informations lacunaires: dans ce cas vous pouvez mettre à jours la base de donnée de man
-grâce à la commande mandb.
-\section{\Large  Comprendre les outils du « SHELL»}
-A) \textbf{Le « TAB Completion »} : le SHELL possède la capacité de compléter vos
-commandes si vous tapez sur « \textbf{TAB} » et que celle-ci ne souffre d’aucune
-ambiguïté. Si votre commande souffre d’ambiguïté, tapez 2 x sur «TAB » pour
-obtenir une liste réduite de commande.\\\\
-B) \textbf{history} : Le SHELL référence l’ensemble des commandes que vous
-utilisez dans la console et est capable de vous les restituer.\\
-history référence un fichier qui conserve une trace des commandes
-tapées et ce de manière persistance même après reboot.\\\\
-C) Les redirections $\Rightarrow$ il existe trois canaux principaux : \\
+ \chapter{MODULE : Les outils essentiels}
+  \section{\Large  Les 7 premières commandes}
+   \begin{flushleft}
+    • \textbf {\textit{\color{red}whoaim}} : Renvoie votre login-name actuel.\\
+    • \textbf {\textit{\color{red}hostname}} : Renvoie le nom de la machine sur laquelle vous travaillez.\\
+    • \textbf {\textit{\color{red}date}} : Renvoie la date actuelle.\\
+    • \textbf {\textit{\color{red}uname}} : Renvoie des informations sur le système actuel.\\
+    • \textbf{\textit{\color{red}passwd}} : Permet au user de changer son mot-de-passe et permet à     l’administrateur ou le root de changer le mot-de-passe d’un user.\\
+    • \textbf{\textit{\color{red}touch}} : Permet la création d’un fichier vide ou la mise à jour de la date de modification d’un ficher existant.\\
+    • \textbf{\textit{\color{red}last}} : Renvoie la liste des utilisateurs qui se sont récemment connectés au système\\
+   \end{flushleft}      
+  \section{\Large Obtenir de l’aide }
+	\subsection{Avec l’attribut --help}
+	 Pour obtenir une aide rapide sur une commande, on utilise l’attribut --help à la suite de la commande.
+	\subsection{Avec la commande man} 
+     {\color{red}Man} est une commande qui permet d’obtenir de l’aide quant à l’utilisation,
+     la syntaxe et les attributs des autres commandes Linux.\\
+     La commande man s’utilise avec la syntaxe suivante : man [Nø section] [nom de la commande recherchée.\\
+     Il peut arriver que man ne soit pas à jours et ne vous renvoie rien ou des informations lacunaires: dans ce cas vous pouvez mettre à jours la base de donnée de man grâce à la commande mandb.
+  \section{\Large  Comprendre les outils du « SHELL»}
+   A) \textbf{Le « TAB Completion »} : le SHELL possède la capacité de compléter vos commandes si vous tapez sur « \textbf{TAB} » et que celle-ci ne souffre d’aucune ambiguïté. Si votre commande souffre d’ambiguïté, tapez 2 x sur «TAB » pour obtenir une liste réduite de commande.\\\\
+   B) \textbf{History} : Le SHELL référence l’ensemble des commandes que vous utilisez dans la console et est capable de vous les restituer.\\
+    History référence un fichier qui conserve une trace des commandes tapées et ce de manière persistance même après reboot.\\\\
+   C) \textbf{Les redirections} $\Rightarrow$ il existe trois canaux principaux : \\
+   
+	1) {\color{red}STDIN} : c’est l’entrée standard (généralement le clavier)\\
+	
+	2) {\color{red}STDOUT} : c’est la sortie standard (généralement l’écran)\\
+	
+	3) {\color{red}STDERR} : c’est le canal d’erreur (généralement vers un fichier)\\
+	
+      Les redirections permettent de rediriger chaque canal selon nos besoins.\\
 
-	• STDIN : c’est l’entrée standard (généralement le clavier)\\
-	
-	• STDOUT : c’est la sortie standard (généralement l’écran)\\
-	
-	• STDERR : c’est le canal d’erreur (généralement vers un fichier)\\
-	
-Les redirections permettent de rediriger chaque canal selon nos besoins .\\
-
-	• Exemple : il est possible de diriger la sortie standard vers un fichier plutôt que vers l’écran.\\\\
-D) Les pipes « | » :
+• Exemple : il est possible de diriger la sortie standard vers un fichier plutôt que vers l’écran.\\\\
+D) \textbf{Les pipes « | »} :
 Le pipe permet de rediriger la sortie d’une commande dans l’entrée d’une seconde afin que la deuxième commande effectue un traitement sur le résultat de la première.
-\chapter{MODULE 2}
+\chapter{MODULE : Les outils essentiels pour la gestion des fichiers}
 \section{\Large L’arborescence du système de fichier} 
- Cette structure peut sensiblement varier en fonction des distributions
+ Cette structure peut sensiblement varier en fonction des distributions.\\
 $\Rightarrow$ Mais un tronc commun est communément admis c’est le « FHS : file hierarchy
 standard »\\
 $\Rightarrow$ Chaque arborescence de fichier en Linux prend toujours naissance avec le
@@ -106,9 +110,13 @@ $\Rightarrow$ Pour un dossier : cp -R [SOURCE] [DESTINATION]
  
 \section{\Large Travailler avec les dossiers}
 
-• La commande cd (change directory) $\Rightarrow$ Elle permet de se déplacer dans le système. Le chemin peut être absolu relatif.\\
+• La commande cd (change directory)\\
+$\Rightarrow$ Elle permet de se déplacer dans le système. Le chemin peut être absolu ou relatif.\\
+$\Rightarrow$ cd . permet de rester dans le répertoire courant.\\
+$\Rightarrow$ cd .. permet de remonter dans le répertoire parent.\\\\
+• La commande mkdir(make directory)$\Rightarrow$ permet de créer un dossier dans le système.\\
 
-• La commande rmdir (remove directory) $\Rightarrow$ Elle permet de supprimer un dossier dans le système.
+• La commande rmdir (remove directory) $\Rightarrow$ permet de supprimer un dossier dans le système.
 
 
 \section{\Large Utiliser les chemins absolus et relatifs} 
@@ -118,23 +126,256 @@ $\Rightarrow$ Pour un dossier : cp -R [SOURCE] [DESTINATION]
 
 • \textbf{Un chemin relatif} est un chemin qui commence à la position actuelle dans le système de fichier.
 
+\section{\Large Déplacer un fichier avec la commande mv}
+
+• Techniquement il est possible de déplacer un fichier avec la commande cp mais celle-ci à le désavantage de conserver une version du fichier à l’emplacement originel.\\
+• Pour cela la commande mv a la capacité de recopier le fichier dans une autre partie de
+l’arborescence de fichier tout en effaçant le fichier de son emplacement originel.\\
+• Il est à noter que d’un point de vue système, renommer un fichier revient à déplacer(mv) ou copier se fichier(cp) avec un autre nom dans une [DESTINATION == SOURCE]
+
+\section{\Large Supprimer un fichier ou un dossier avec la commande rm}
+
+• La suppression de fichiers ou de dossiers en Linux se fait via la commande rm.\\
+$\Rightarrow$ Pour supprimer un fichier : rm [SOURCE]\\
+$\Rightarrow$ Pour supprimer un dossier : rm -r [SOURCE]\\
+$\Rightarrow$ Pour supprimer un dossier sans confirmation : rm -rf [SOURCE]
+
 \section{\Large Comprendre le Hard-Link et le Symbolic-Link} 
 
+• Les systèmes Linux possèdent une caractéristique très utiles que l’on appel « Link »\\
 • Il existe deux types de « Link »\\
 
 $\Rightarrow$ Le Hard-Link : est un nom qui référence un « inode » qui lui même référence un bloc sur le périphérique de stockage.\\
 
 $\Rightarrow$ Le symbolic-Link : est un nom qui référence un Hard-link
 
-\section{\Large Créer un link avec la commande ln} 
+\begin{flushleft}
+\includegraphics[scale=0.6]{link.jpg}
+\end{flushleft}
 
+\section{\Large Créer un link avec la commande ln}
 
+• Pour créer un « Link » dans un système Linux, vous devez utiliser la commande ln\\
+• Peut importe que vous vouliez créer un Hard-Link ou un Symbolic-Link\\
+• ln [SOURCE] [LINK-NAME] : permet de créer un HARD-LINK\\
+• ln -s [SOURCE] [LINK-NAME] : permet de créer un Symbolic-Link\\
  
+ \section{\Large Trouver un fichier avec la commande find}
+ 
+ • Pour configurer certains services ou simplement parfois pour exécuter un script, il est nécessaire de trouver le fichier de configuration ou le fichier script dans le système de fichier.\\
+• Cela peut s’avérer difficile étant donné la quantité de fichier contenue dans un OS.\\
+$\Rightarrow$ find [START-POINT] -name « [FILENAME] » : permet de chercher un fichier/dossier de manière récursive grâce à son nom à partir du point de départ.\\
+$\Rightarrow$ find [START-POINT] -user « [USERNAME] » : permet de chercher tous les fichiers/dossiers appartenant à un utilisateur de manière
+récursive grâce au nom de l’utilisateur à partir du point de départ.
+ 
+\begin{flushleft}
+\includegraphics[scale=0.5]{Find.jpg}
+\end{flushleft}
+ 
+\chapter{MODULE : Travailler avec des fichiers textes}
+\section{\Large Comprendre VIM} 
+
+• Par tradition, il existe deux logiciels d’édition couramments utilisés pour réussir à éditer des fichiers en ligne de commande afin de ne pas devoir sortir du « SHELL »\\
+ 
+$\Rightarrow$ VIM (celui que nous allons voir)\\
+$\Rightarrow$ Emacs ( le plus compliqué des deux à maitriser)\\
+
+• Pour éditer un fichier texte avec « VIM » vous devez utiliser la commande vim [SOURCE DU FICHIER]\\
+
+• vim fonctionne sous 3 modes distinct :\\
+1) Le mode « command » : permet de sauvegarder, quitter, rechercher …\\
+2) Le mode « insert » : permet d’éditer le texte ...\\
+3) Le mode « visual » : permet d’effectuer des sélections dans le texte ...\\
+
+• Il est très important de comprendre que chaque action ne peut se faire que dans le
+mode qui lui est dédié
+
+• En fonction des modes « VIM » possède plusieurs options :\\
+
+- \underline{En mode COMMANDE :}\\
+- :w (sauvegarde votre fichier)\\
+- :q (quitte le fichier)\\
+- :! ( force l’action)\\
+- :wq ! (sauvegarde et quitte en forçant l’action)\\
+- u (undo)\\\\
+- \underline{En mode INSERT :}\\
+- Vous pouvez simplement l’utiliser comme un éditeur de texte sans l’option copier – coller.\\\\
+- \underline{En mode VISUAL :}\\
+- D (delete la sélection)\\
+- Y (copie la sélection)\\
+- P (colle la sélection)\\
+
+\section{\Large Travailler avec le pager less} 
+
+• less [SOURCE] est une commande qui à la capacité d’organiser le texte en page pour le « SHELL ». \\
+
+\section{\Large Lire un fichier texte grâce à cat et tac} 
+
+• Certain fichiers texte sont suffisamment court pour ne pas requérir à less.\\
+• La commande cat [SOURCE] est alors utile pour présenter le contenu du fichier dans le « SHELL »\\
+
+\section{\Large Lire le début ou la fin d’un fichier avec head tail} 
+
+• head -n[nombre de lignes] [SOURCE] : présente les 10 premières lignes du fichier dans le
+« SHELL »\\
+• tail -n[nombre de lignes] [SOURCE] : présente les 10 dernières lignes du fichier dans le
+« SHELL »
+
+\section{\Large Travailler avec la commande grep en dehors de |} 
+
+• grep est une des commandes les plus utiles en Linux.\\
+• Exemple : vous chercher tout les fichiers ou il est écrit « dhcp » dans votre système.\\
+• grep -iR [Expression recherchée] 2>/dev/null\\
+• -i : attribut qui rend grep case insensitive\\
+• -R : attribut qui permet à grep de travailler de manière récursive\\
+• 2>/dev/null : redirection des erreurs dans le /dev/null\\
+
+\section{\Large Comprendre les « REGEXP »} 
+
+• Les expressions régulière sont des modelé de texte utilisable
+par des outils présent dans Linux comme grep\\
+• Il ne faut pas confondre les « REGEXP » et le « globbing » Linux\\
+$\Rightarrow$ Le « globbing » est interne au « SHELL »\\
+$\Rightarrow$ Les « REGEXP » est générale et utilisable par toute les
+commandes qui traite des chaines de caractère.\\
+
+\begin{flushleft}
+\includegraphics[scale=0.4]{REGEXP.jpg}
+\end{flushleft}
+
+
+\section{\Large Utiliser les commandes awk, sort, tr} 
+• awk est une commande qui permet de découper un texte en fonction de ses délimiteurs.
+\begin{flushleft}
+\includegraphics{AWK1.jpg}
+\end{flushleft}
+\begin{flushleft}
+\includegraphics{AWK2.jpg}
+\end{flushleft}
+
+• sort est une commande qui permet de trier le texte dans l’ordre alphabétique ou numérique.\\
+$\Rightarrow$ sort [source] (alphabétique)\\
+$\Rightarrow$ sort -n [source] (numérique)\\
+
+• tr est une commande qui permet réaliser une traduction de certains caractères du texte en d’autres\\
+$\Rightarrow$ tr [caractère(s) d’origine] [caractère(s) de remplacement]\\
+$\Rightarrow$ tr [état d’origine] [état de remplacemen]
+
+\pagebreak 
+
+
+\chapter{Se connecter à un serveur}
+	\section{Travailler en « root » ou en « local user »}
+	•En Linux il existe deux types d'utilisateurs :\\
+$\rightarrow$ L'utilisateur normal appelé "local user"\\
+$\rightarrow$ Le super-utilisateur appelé "root"\\
+
+	•Il est possible de se connecter en tant que "root" uniquement dans un "SHELL" précis et pas sur tout
+l’environnement grâce à la commande \color{red}sudo -i {\color{black}ou} grâce à sudo su -\\ 
+
+$\triangle$ 
+\textit{\color{black}
+Il faut éviter, tant que faire se peux, de travailler en "root"}\\
+
+\color{black}
+
+	\section{Utiliser la commande {\color{red}su}}
+	•La commande {\color{red}su [LOGIN]} permet de se connecter à n'importe quel utilisateur (pour peu que l'on ai les droits d'administrations)\\
+	
+	•Pour effectuer des opérations admin il faut soit être le "root", soit faire partie des "sudoers" (=user capable de lancer la commande {\color{red}sudo})\\
+	$\Rightarrow$ Pour cela, l'user doit faire partie du groupe "wheel"\\
+	
+	•{\color{red}id [USERNAME]} $\Rightarrow$ Montre l'UID, le GID, ainsi que les groupes auquels appartiennent l'user\\
+	
+\pagebreak 	
+	
+	\section{Créer une configuration "sudo" simple}
+	•Dans le système Linux, il existe un fichier qui régi les cas d’utilisation du sudo.\\
+	{\color{red}visudo} $\Rightarrow$ Permet d'ouvrir ce fichier avec VIM et d'y effectuer des changements\\
+	
+	
+	\section{Connexion à distance à un système Linux}
+•\color{red}
+	ssh [username]@[ip-address] {\color{black}ou} ssh [username]@[hostname] 
+\color{black}
+$\Rightarrow$ Permet de se connecter d'une machine Linux à une autre de manière sécurisée.\\
+	
+\textit{Remarque : La commande {\color{red}telnet} existe également mais à tendance à disparaitre des nouvelles distri Linux car elle n'est pas sécurisée}
+
+\pagebreak 
+	
+	
+
+
+	
+
+
+\chapter{La gestion des utilisateurs}
+	\section{\Large Importance des users} 
+    Users important car : \\
+    	•impossible de se connecter sans users. \\
+	•Chaque processus appartient à un user. \\
+			
+user accounts = personne physique ou entité système\\
+$\Rightarrow$ "Chaque fichier ou dossier DOIT posséder un user"
+	\section{Création des users}
+	•{\color{red}useradd [OPTIONS] [LOGIN]} $\Rightarrow$ Créer un user \\
+	•{\color{red}useradd -g [GROUPE] [LOGIN] } $\Rightarrow$ Créer un user en lui attribuant un autre groupe primaire autre que lui-même (attention le groupe doit déjà exister)\\
+	•{\color{red}useradd -G [GROUPES] [LOGIN]} $\Rightarrow$ Créer un « user » en lui attribuant des groupes secondaires  (attention les groupes doivent déjà exister)\\
+	•Pour la gestion des paramètres de création par défaut des user voir {\color{blue}/etc/default/useradd}, {\color{blue}/etc/login.defs} et {\color{blue} /etc/skel/}
+	
+	\section{Suppression d'un user}
+	
+	•{\color{red}userdel [OPTIONS] [LOGIN]} $\Rightarrow$suppression d’un user
+	
+	\pagebreak 
+	
+	\section{Création groupes}
+	•{\color{red}groupadd [OPTIONS] [GROUPE]} $\Rightarrow$ création groupe\\
+	•{\color{red}usermod [OPTIONS] [LOGIN]} $\Rightarrow$ permet de modifier les paramètres d’un user déjà existant\\
+	•{\color{red}usermod -g [NEW PRIMARY GROUP] [LOGIN]} $\Rightarrow$ change le groupe primaire du user\\
+	•{\color{red}usermod -G [LIST OF SECONDARY GROUP] [LOGIN]} $\Rightarrow$ écrase la liste des groupes secondaires du « user » pour la remplacer par la nouvelle\\
+	•{\color{red}usermod -aG [LIST OF SECONDARY GROUP] [LOGIN]} $\Rightarrow$ : ajoute sans écraser à la liste des groupes secondaires du user les nouveaux groupes
+	
+	\section{Modifications de groupes}
+	•{\color{red}groupmod [OPTIONS] [GROUP]} $\Rightarrow$ Modifie un groupe déjà existant
+	
+	\section{Passwords}
+	•\color{red}
+	passwd [OPTIONS] login 
+	{\color{black}OU}
+	chage [OPTIONS] login
+	\color{black}
+	$\Rightarrow$ Permet d'ajouter ou supprimer des passwords\\
+	
+	•Le fichier {\color{blue}/etc/passwd} contient la liste des utilisateurs et est en accès non restreint.\\
+Il contient 7 champs : password : UID : GID : comment : homedir : shell\\
+
+	•Le fichier {\color{blue}/etc/group} contient la définition des groupes et la liste des utilisateurs qui en font partie\\
+	Il contient 4 champs : Group: password : GID : users ( tierce)\\
+	
+	•Le fichier {\color{blue}/etc/shadow} accompagne le fichier {\color{blue}/etc/passwd} et c’est là que sont stockés, entre autres, les passwords cryptés des utilisateurs ainsi que les informations relatives à leurs validités.\\
+	
+	•{\color{blue}/etc/gshadow} : C’est le pendant du fichier {\color{blue}/etc/shadow} mais pour les groupes. Il n’est cependant pas supporté dans certaines distributions LINUX anciennes\\
+Il contient 4 champs : Group : password crypté : admins du group : membres du groupe\\
+
+\textit{Remarque : La création des utilisateurs peut être entièrement effectuée à la main en travaillant sur les fichiers car se sont des fichiers plats (vivement déconseillé de le faire)}
+
+
+
+
+
+		
+
+	
+
  
    \appendix
-   \chapter{Annexe}
-      \section{Section d'annexe}
-    
+   
+
+	
+
    \backmatter
+   
    \chapter{Épilogue}
 \end{document}
