correction commande #whoami, erreur dans le cours

--- a/Devoir Latex final/devoir.tex
+++ b/Devoir Latex final/devoir.tex
@@ -30,7 +30,7 @@
 	\chapter{Les outils essentiels}
 		\section{Les 7 premières commandes}
          %\begin{flushleft}
-         • \textbf {\textit{\color{red}whoaim}} : Renvoie votre login-name actuel.\\
+         • \textbf {\textit{\color{red}whoami}} : Renvoie votre login-name actuel.\\
          • \textbf {\textit{\color{red}hostname}} : Renvoie le nom de la machine sur laquelle vous travaillez.\\
          • \textbf {\textit{\color{red}date}} : Renvoie la date actuelle.\\
          • \textbf {\textit{\color{red}uname}} : Renvoie des informations sur le système actuel.\\
